# Kitpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Readme.md  makefile  meson.build  meson_options.txt  test.sh
.cache/clangd/index/: kitpp.hpp.9314171066848F65.idx  log.hpp.8A66B0AC5771B299.idx  platform.hpp.601F07EA7EEF47CC.idx  printVersion.cpp.BA001966B5230183.idx  rang.hpp.E4D6AB0C4C967D8E.idx  scope_timer.hpp.1F52EE2089A2031B.idx  throughput_logger.hpp.9CC1380FE3B47C43.idx  usage_example.cpp.2E0DF1EE1F46921A.idx  version.hpp.7E336F331272BA72.idx
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
examples/: daxpy_example.cpp  dot_prod_example.cpp  usage_example.cpp
include/kitpp/: Index.txt  kitpp.cpp  kitpp.hpp  log.hpp  scope_timer.hpp  throughput_logger.hpp  version.hpp
include/kitpp/log/: TimerCommon.hpp  log.hpp  manual_timer.hpp  memory.hpp  scope_timer.hpp  throughput_logger.hpp
include/kitpp/math/: DAXPY.hpp  dot_prod.hpp
include/kitpp/sys/: platform.hpp  resource.hpp  version.hpp
src/: printVersion.cpp
